STA&BASIC-3 passed

--- a/STAT&BASIC-3. Доверительные интервалы на Python.ipynb
+++ b/STAT&BASIC-3. Доверительные интервалы на Python.ipynb
@@ -2,151 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.stats import norm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.84"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "round(norm.cdf(1), 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.87"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "round(norm.cdf(1.12), 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.03"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "round(norm.cdf(-1.87), 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.02"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "round(1-norm.cdf(2), 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1.28"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "round(norm.ppf(0.1), 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "round(norm.ppf(0.95), 2)"
+    "from scipy.stats import norm\n",
+    "import math\n",
+    "\n",
+    "def confidence_interval_norm(alpha, sigma, n, mean):\n",
+    "    value = -norm.ppf(alpha / 2) * sigma / math.sqrt(n)\n",
+    "    return int(round(mean - value)), int(round(mean + value))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1.96"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "round(norm.ppf(0.025), 2)"
+    "from scipy.stats import t\n",
+    "\n",
+    "def confidence_interval_t(alpha, s, n, mean):\n",
+    "    value = -t.ppf(alpha / 2, n - 1) * s / math.sqrt(n)\n",
+    "    return int(round(mean - value)), int(round(mean + value))"
    ]
   },
   {
@@ -157,7 +35,7 @@
     {
      "data": {
       "text/plain": [
-       "2.33"
+       "(1818, 2182)"
       ]
      },
      "execution_count": 12,
@@ -166,7 +44,11 @@
     }
    ],
    "source": [
-    "round(norm.ppf(0.99), 2)"
+    "alpha = 0.1\n",
+    "s = 400\n",
+    "mean = 2000\n",
+    "n = 15\n",
+    "confidence_interval_t(alpha, s, n, mean)"
    ]
   },
   {
@@ -177,7 +59,7 @@
     {
      "data": {
       "text/plain": [
-       "-2.58"
+       "(1778, 2222)"
       ]
      },
      "execution_count": 13,
@@ -186,68 +68,53 @@
     }
    ],
    "source": [
-    "round(norm.ppf(0.005), 2)"
+    "alpha = 0.05\n",
+    "confidence_interval_t(alpha, s, n, mean)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.23606797749979"
+       "(1693, 2307)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "var = 5/(5**0.5)\n",
-    "var"
+    "alpha = 0.01\n",
+    "confidence_interval_t(alpha, s, n, mean)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.013"
+       "(3353, 3727)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "round(1 - norm(loc=70*5, scale=var*5).cdf(375), 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9382176917466495"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "norm.cdf(75, 70, var)**5"
+    "alpha = 0.01\n",
+    "sigma = 1150\n",
+    "n = 250\n",
+    "mean = 3540\n",
+    "confidence_interval_norm(alpha, sigma, n, mean)"
    ]
   },
   {
@@ -258,7 +125,7 @@
     {
      "data": {
       "text/plain": [
-       "0.067"
+       "[1.2, 0.2, 1.6, 1.9, -0.4, 0.5, 1.4, 1.7, 2.5, 1.3]"
       ]
      },
      "execution_count": 38,
@@ -267,142 +134,182 @@
     }
    ],
    "source": [
-    "p = 0.2\n",
-    "n = 225\n",
-    "sigma = (p*(1-p)/n)**0.5\n",
-    "round(norm.cdf(0.16, p, sigma), 3)"
+    "X = [1.2, 0.2, 1.6, 1.9, -0.4, 0.5, 1.4, 1.7, 2.5, 1.3]\n",
+    "X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "800.0"
+       "(0.5732883999380967, 1.8067116000619032)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(1*0.3 + 2*0.4 + 3*0.3)*400"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.7"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "2*0.1+3*0.2+4*0.6+5*0.1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "18.0"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(2**2)*0.1+(3**2)*0.2+(4**2)*0.6+(5**2)*0.1 +3.7"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 2.11.4 Задание по Python\n",
-    "loc = 700\n",
-    "scale = 120\n",
-    "dist = norm(loc=loc, scale=scale)"
+    "import statistics\n",
+    "from scipy.stats import t\n",
+    "\n",
+    "def confidence_interval_t(alpha, s, n, mean):\n",
+    "    value = -t.ppf(alpha / 2, n - 1) * s / math.sqrt(n)\n",
+    "    return mean - value, mean + value\n",
+    "\n",
+    "alpha = 0.05\n",
+    "s = math.sqrt(statistics.variance(X))\n",
+    "mean = statistics.mean(X)\n",
+    "n = len(X)\n",
+    "confidence_interval_t(alpha, s, n, mean)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.16000000000000003"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "1 - round(dist.cdf(820),2)"
+    "# 3.8.1\n",
+    "n = 189\n",
+    "positive = 132"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.24"
+       "0.698"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "round(dist.cdf(820),2) - round(dist.cdf(730),2)"
+    "p = positive / n\n",
+    "round(p, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "502.61756476582326"
+       "[0.644, 0.753]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dist.ppf(0.05)"
+    "alpha = 0.1\n",
+    "z = -norm.ppf(alpha / 2)\n",
+    "p_gen = [round(p - z * math.sqrt(p * (1-p) / n), 3), round(p + z * math.sqrt(p * (1-p) / n), 3)]\n",
+    "p_gen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6448536269514729"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-norm.ppf(alpha / 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3.9. Находим z-критическое и t-критическое"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.1700903775845606\n"
+     ]
+    }
+   ],
+   "source": [
+    "alpha = 0.03\n",
+    "value = -norm.ppf(alpha/2)\n",
+    "print(value) # 2.17"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.9842169515086827\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 0.95 - доверительный интервал, 100-1 число степеней свободы\n",
+    "# для двустороннего t-теста\n",
+    "value = t.ppf((1 + 0.95)/2, 100-1)\n",
+    "print(value) # 1.98"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def norm_func(alpha):\n",
+    "    return round(-norm.ppf(alpha/2), 2)\n",
+    "\n",
+    "def z_func(alpha, k):\n",
+    "    return round(-t.ppf(alpha/2, k-1), 2)"
    ]
   },
   {
@@ -413,7 +320,7 @@
     {
      "data": {
       "text/plain": [
-       "1.65"
+       "1.81"
       ]
      },
      "execution_count": 76,
@@ -422,30 +329,67 @@
     }
    ],
    "source": [
-    "-(norm.ppf(0.05)*100//1/100)"
+    "norm_func(0.07)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11.855\n",
-      "12.845\n"
-     ]
+     "data": {
+      "text/plain": [
+       "2.58"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "sigma = 2.4\n",
-    "avg = 12.35\n",
-    "n = 64\n",
-    "z = -(norm.ppf(0.05)*100//1/100)\n",
-    "print(round(avg - z * sigma / (64**0.5), 3))\n",
-    "print(round(avg + z * sigma / (64**0.5), 3))"
+    "norm_func(0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.98"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z_func(0.05, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.96"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "norm_func(0.05)"
    ]
   },
   {
